--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -61,7 +61,7 @@ nav {
   justify-content: space-between;
   align-items: center;
   // background-color: rgb(243,243,235);
-  border-bottom: 1px solid rgb(231,230,225);
+  // border-bottom: 1px solid rgb(231,230,225);
   padding: 0 20px;
 }
 
