mounted images to app

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,10 +8,11 @@
     <%= stylesheet_link_tag    'application', media: 'all' %>
     <%= javascript_include_tag 'application' %>
     <script>
-      window.github = "<%= image_url('iconfinder_Github_1298743.png') %>" 
-    </script>
-    <script>
-      window.linkedin = "<%= image_url('iconfinder_linkedin_287553.png') %>" 
+      window.github = "<%= image_url('iconfinder_Github_1298743.png') %>";
+      window.linkedin = "<%= image_url('iconfinder_linkedin_287553.png') %>";
+      window.FellowshipOfTheRing = "<%= image_url('book_covers/Fellowship_of_the_Ring.jpg') %>";
+      window.TwoTowers = "<%= image_url('book_covers/Two_Towers.jpg') %>";
+      window.ReturnOfTheKing = "<%= image_url('book_covers/Return_of_the_King.jpg') %>";
     </script>
     <% if false %>
     <script type="text/javascript">
