--- a/app/assets/stylesheets/api/masthead.scss
+++ b/app/assets/stylesheets/api/masthead.scss
@@ -58,6 +58,15 @@
   padding: 0 0 0 20px;
 }
 
+.left-nav {
+  display: flex;
+}
+
+.signedin-masthead-container h4 {
+  padding: 16px 15px 16px 0;
+  cursor: pointer;
+}
+
 .nav-buttons {
   list-style: none;
   display: flex;
