fixed CSS of book show page

--- a/app/assets/stylesheets/api/books.scss
+++ b/app/assets/stylesheets/api/books.scss
@@ -17,6 +17,12 @@
 .back-to-book-index {
   padding-top: 10px;
   width: 100%;
+  color: #171717;
+  text-decoration: none;
+}
+
+.back-to-book-index:hover {
+  color: #3f3e3e;
 }
 
 .book-info {
