--- a/app/assets/stylesheets/api/masthead.scss
+++ b/app/assets/stylesheets/api/masthead.scss
@@ -30,7 +30,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 20px 0;
+  padding-top: 20px;
   cursor: default;
   background-color: #F4F2E9;
   color: #484744;
