--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -27,6 +27,7 @@ time, mark, audio, video {
 .content {
   position: relative;
   min-height: 100vh;
+  background-color: #f3f3eb;
 }
 
 .content-wrap {
