--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -78,7 +78,7 @@ nav {
 .footer {
   position: absolute;
   bottom: 0;
-  width: 100%;
+  width: -webkit-fill-available;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -86,10 +86,6 @@ nav {
   border-top: 1px solid rgb(231,230,225);
   height: 40px;
   padding: 10px 20px 10px 20px;
-}
-
-.footer div {
-  padding-right: 30px;
 }
 
 .footer-author-line {
