--- a/app/assets/stylesheets/api/shelves.scss
+++ b/app/assets/stylesheets/api/shelves.scss
@@ -3,7 +3,7 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 .bookshelf-container {
-  width: 100%;
+  // width: 100%;
   padding-bottom: 25px;
   margin: 15px 0 0 5px;
 }
