--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -82,7 +82,7 @@ nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: rgb(243,243,235);
+  background-color: #E7E3D1;
   border-top: 1px solid rgb(231,230,225);
   height: 40px;
   padding: 10px 20px 10px 20px;
