--- a/app/assets/stylesheets/api/books.scss
+++ b/app/assets/stylesheets/api/books.scss
@@ -61,3 +61,58 @@
   height: 375px;
 }
 
+.shelved-dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.shelved-dropdown-signedout {
+  font-size: 12px;
+}
+
+.shelved-dropdown span {
+  padding: 6px 6px 7px 8px;
+  float: left;
+}
+
+.shelved-dropdown-button {
+  padding: 5px;
+  width: 27px;
+  height: 28px;
+  box-sizing: border-box;
+  background-color: #409D69;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: 8px 4px;
+  border: 0;
+  margin: 0;
+  cursor: pointer;
+  display: block;
+  background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABAAAAAICAQAAABaf7ccAAAAKUlEQVR4AX3KsQEAIAzDsJzez8MuoF6tdLo1icQdiBvilrglnw1xS9wHeq2Hge3);
+}
+
+.shelved-dropdown-button:hover {
+  background-color: #1b8b4c;
+}
+
+
+.shelved-shown {
+  position: absolute;
+  top: 100%;
+}
+
+.shelved-shown ul {
+  margin-top: 2px;
+  padding-bottom: 2px;
+  background: #ffffff;
+  border-color: #cccccc;
+  border-radius: 3px;
+  border-style: solid;
+  border-width: 1px;
+  box-shadow: 0 3px 4px -3px rgba(0,0,0,0.5);
+  font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 12px;
+  width: 132px;
+  z-index: 2;
+  max-height: 250px;
+}
